--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        Changes
-    </p>
-    <div>Yes, more changes</div>
-    <h1>New master</h1>
+    <h1>This is the new code in master</h1>
 </body>
 </html>
