--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>This is the new code in master</h1>
+    <h1>changes will cause a conflict</h1>
     <h2>I am going to cause a conflict</h2>
   </body>
 </html>
