--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>This is the new code in master</h1>
+    <h1>Making some changes</h1>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et velit quia
+      exercitationem, optio est quaerat aspernatur. Sint pariatur natus dolorem
+      libero soluta sit reiciendis, harum quasi rem ratione maiores voluptatem.
+    </p>
     <h2>I am going to cause a conflict</h2>
   </body>
 </html>
