--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>Making some changes</h1>
     <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et velit quia
-      exercitationem, optio est quaerat aspernatur. Sint pariatur natus dolorem
-      libero soluta sit reiciendis, harum quasi rem ratione maiores voluptatem.
+      Lorem ipsum dolor sit sajja consectetur adipisicing elit. Quanto quanto
+      placeat dolor skdjskjdsajd libero explicabo atque voluptas sunt
+      accusantium inventore sit.
     </p>
     <h2>I am going to cause a conflict</h2>
   </body>
