I want this to break

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
   </head>
   <body>
     <h1>Making some changes</h1>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et velit quia
-      exercitationem, optio est quaerat aspernatur. Sint pariatur natus dolorem
-      libero soluta sit reiciendis, harum quasi rem ratione maiores voluptatem.
-    </p>
+    <p>Subscribe to Easy Software Developer!!!!! NOWWWW!!!</p>
     <h2>I am going to cause a conflict</h2>
   </body>
 </html>
